--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -6,7 +6,7 @@
         <source> Language </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">12</context>
+          <context context-type="linenumber">13</context>
         </context-group>
       </trans-unit>
       <trans-unit id="notification-alertDelete" datatype="html">
@@ -315,6 +315,67 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/todo/components/list-todo/list-todo.component.html</context>
           <context context-type="linenumber">47</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="block-formLogin-title" datatype="html">
+        <source>Login</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/login/components/login-form/login-form.component.html</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="block-formLogin-error-emailRequired" datatype="html">
+        <source>
+        Email is required
+      </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/login/components/login-form/login-form.component.html</context>
+          <context context-type="linenumber">19</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="block-formLogin-error-emailMaxLength" datatype="html">
+        <source>
+          Max length is:
+        </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/login/components/login-form/login-form.component.html</context>
+          <context context-type="linenumber">26</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="block-formLogin-error-emailFormat" datatype="html">
+        <source>
+          Email format is incorrect
+        </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/login/components/login-form/login-form.component.html</context>
+          <context context-type="linenumber">37</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="block-formLogin-error-passwordMaxlength" datatype="html">
+        <source>
+          Max length is:
+        </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/login/components/login-form/login-form.component.html</context>
+          <context context-type="linenumber">59</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="block-formLogin-error-emailPassword" datatype="html">
+        <source>
+        Email and password do not exist
+      </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/login/components/login-form/login-form.component.html</context>
+          <context context-type="linenumber">69</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="block-formLogin-button-submit" datatype="html">
+        <source>
+          Login
+        </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/login/components/login-form/login-form.component.html</context>
+          <context context-type="linenumber">82</context>
         </context-group>
       </trans-unit>
     </body>
