--- a/src/locale/messages.en.xlf
+++ b/src/locale/messages.en.xlf
@@ -282,6 +282,30 @@
 					</context>
 				</context-group>
 			</trans-unit>
+			<trans-unit id="block-formTodo-messErrorRequiredCreator" datatype="html">
+				<source>
+					Creator is required
+				</source>
+				<target>
+					Creator is required
+				</target>
+				<context-group purpose="location">
+					<context context-type="sourcefile">
+						src/app/modules/todo/components/form-todo/form-todo.component.html
+					</context>
+					<context context-type="linenumber">
+						33
+					</context>
+				</context-group>
+				<context-group purpose="location">
+					<context context-type="sourcefile">
+						src/app/modules/todo/components/form-todo/form-todo.component.html
+					</context>
+					<context context-type="linenumber">
+						45
+					</context>
+				</context-group>
+			</trans-unit>
 			<trans-unit id="block-formTodo-labelContent" datatype="html">
 				<source>
 					Content
